# card_downloader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: windows-installer.yml
data/decklists/: example-commander.txt
docs/: gui.md  implementation-progress.md  packaging.md  project-plan.md  selection-rules.md  tdd-roadmap.md
input/: smoke-deck.txt
old_Python/: download_oldest_printings.py  download_scryfall_images backup.py  make_proxy_sheets.py
packaging/pyinstaller/: CardDownloader.spec
packaging/windows/: CardDownloader.iss
scripts/: build_linux.sh  build_windows.ps1
src/card_downloader/: __init__.py  __main__.py
src/card_downloader/cli/: main.py
src/card_downloader/decklist/: models.py  normalize.py  parser.py
src/card_downloader/download/: filenames.py  images.py
src/card_downloader/gui/: __init__.py  app.py  main.py  options.py  runner.py
src/card_downloader/manifest/: csv_writer.py  reader.py  schema.py  writer.py
src/card_downloader/pipeline/: download.py  plan.py
src/card_downloader/scryfall/: cache.py  client.py  errors.py  headers.py  models.py  pagination.py  protocols.py  rate_limit.py
src/card_downloader/selection/: anchors.py  classify.py  config.py  fallback.py  filters.py  models.py  optimizer.py  scoring.py
src/card_downloader/sheets/: builder.py  constants.py  geometry.py  image_prep.py  slots.py
tests/: test_smoke.py
tests/fixtures/cards/: command_tower_normal.json  plateau_white_border.json  (+3 more)
tests/integration/: test_cli.py  test_cli_download.py  test_download_pipeline.py  test_pipeline_with_fixtures.py
(+26 files in other folders)
