[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "card-downloader"
version = "0.1.0"
description = "Download MTG card printings from Scryfall and build proxy PDF sheets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "Pillow>=10.0",
    "img2pdf>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.25",
]

[project.scripts]
card-downloader = "card_downloader.cli.main:main"
card-downloader-gui = "card_downloader.gui.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
